# silver

./: Cargo.toml
.github/workflows/: rust.yml
silver/: Cargo.toml
silver-language/: Cargo.toml
silver-language/proptest-regressions/analysis/syntax/: lexer.txt
silver-language/src/: analysis.rs
silver-language/src/analysis/: binding.rs  compilation.rs  diagnostic.rs  diagnostic_kind.rs  errors.rs  evaluator.rs  silver_type.rs  silver_value.rs  syntax.rs  text.rs  variable_symbol.rs
silver-language/src/analysis/binding/: binder.rs  bound_binary_operator.rs  bound_binary_operator_kind.rs  bound_expression.rs  bound_global_scope.rs  bound_node.rs  bound_node_kind.rs  bound_scope.rs  bound_statement.rs  bound_unary_operator.rs  bound_unary_operator_kind.rs
silver-language/src/analysis/errors/: error_reporter.rs  null_error_reporter.rs  string_error_reporter.rs
silver-language/src/analysis/syntax/: compilation_unit_syntax.rs  expression_syntax.rs  lexer.rs  parser.rs  syntax_facts.rs  syntax_kind.rs  syntax_node.rs  syntax_token.rs  syntax_tree.rs
silver-language/src/analysis/text/: source_text.rs  text_line.rs  text_span.rs
silver/src/: main.rs  view_options.rs
