[package]
name = "silver-language"
version = "0.1.0"
authors = ["kyle.coffey <kyle.coffey@tamu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
derive_more = "0.99"
strum = "0.20"
strum_macros = "0.20"

[dev-dependencies]
proptest = "0.10"
pretty_assertions = "0.6"
credibility = "0.1"
