[package]
name = "silver"
version = "0.1.0"
authors = ["kyle.coffey <kyle.coffey@tamu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
crossterm = "0.18"
parking_lot = "0.11"
anyhow = "1.0"
silver-language = { path = "../silver-language" }
